# gigaWhisper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tmpclaude-98aa-cwd  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  GPU_SETUP.md  POST_CODE_ACTIONS.md  PRE_PRODUCTION_FIXES.md  PRODUCTION_READINESS.md
docs/ADR/: 001-framework-tauri.md  002-transcription-dual-engine.md  003-audio-capture-cpal.md  004-keyboard-injection.md  ADR-005-windows-code-signing.md  ADR-006-config-schema-migration.md  ADR-007-crash-reporting.md
e2e/: README.md
e2e/fixtures/: tauri-fixture.ts
e2e/setup/: global-setup.ts  global-teardown.ts
e2e/tests/: app.spec.ts
scripts/: build-gpu.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: build_info.rs  lib.rs  main.rs  updater.rs
src-tauri/src/audio/: buffer.rs  capture.rs  format.rs  mod.rs  vad.rs
src-tauri/src/commands/: clipboard.rs  history.rs  mod.rs  models.rs  recording.rs  settings.rs  transcription.rs
src-tauri/src/config/: migration.rs  mod.rs  secrets.rs  settings.rs  store.rs
src-tauri/src/history/: mod.rs
src-tauri/src/models/: downloader.rs  manager.rs  mod.rs
src-tauri/src/output/: clipboard.rs  focus.rs  keyboard.rs  mod.rs
src-tauri/src/shortcuts/: handler.rs  mod.rs
src-tauri/src/transcription/: groq.rs  mod.rs  orchestrator.rs  provider.rs  service.rs  streaming.rs  whisper.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/utils/: cpu.rs  metrics.rs  mod.rs
src-tauri/tests/: pipeline_integration.rs
src-tauri/tests/integration/: mod.rs  pipeline.rs
src/components/: App.test.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  HotkeyInput.test.tsx  HotkeyInput.tsx  ModelSelector.test.tsx  ModelSelector.tsx  Onboarding.test.tsx  Onboarding.tsx  PopupOverlay.tsx  ProviderToggle.test.tsx  ProviderToggle.tsx  RecordingIndicator.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  UpdateNotification.tsx
src/hooks/: useRecording.test.ts  useRecording.ts  useSettings.test.ts  useSettings.ts
src/styles/: globals.css
src/test/: setup.ts
src/windows/: PopupWindow.css  PopupWindow.tsx  RecordingIndicator.css  RecordingIndicator.tsx
