[package]
name = "gigawhisper"
version = "1.0.2"
description = "Open-source voice transcription app for Windows"
authors = ["GigaWhisper Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/gigawhisper"

[lib]
name = "gigawhisper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"
rubato = "0.15"  # Resampling

# Voice Activity Detection (reduces processing of silent audio)
webrtc-vad = "0.4"

# Whisper.cpp bindings (GPU features are optional)
whisper-rs = "0.14"

# HTTP client for Groq API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"] }

# Futures utilities for async streams
futures-util = "0.3"

# Async
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Clipboard
arboard = "3"

# Configuration
directories = "5"
toml = "0.8"

# Utilities
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

# CPU detection for optimal thread count
num_cpus = "1.16"

# Secure credential storage
keyring = "3"

# Audio file I/O
hound = "3.5"

# Encoding
base64 = "0.22"

# Cryptographic hashing for model verification
sha2 = "0.10"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security_Cryptography",
    "Win32_System_DataExchange",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration features
# Use: cargo build --features gpu-vulkan (for AMD/Intel/NVIDIA)
# Use: cargo build --features gpu-cuda (for NVIDIA only, better performance)
gpu-vulkan = ["whisper-rs/vulkan"]
gpu-cuda = ["whisper-rs/cuda"]

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# Use opt-level = 3 for maximum performance (was "s" for size)
# whisper.cpp benefits significantly from aggressive optimizations
opt-level = 3
strip = true

# Profile for distribution (balance between performance and compatibility)
[profile.dist]
inherits = "release"
# opt-level = 2 is a good balance for distribution
opt-level = 2
